bsp: fix compile-server self-deadlock, cut ECJ and footprint overhead, keep CI telemetry (#623)
* ci: keep the compile server's telemetry from every run

The build job got ~50% slower (12-14 minutes on master before #622, 18-20
after) and the evidence needed to explain that is written by the server and
then thrown away when the runner is destroyed.

Two steps, both `if: always()` because a run that went wrong is the one
whose telemetry is worth having: collect metrics.jsonl and the server logs
into an artifact, and print a summary into the job log so the common
questions need no download at all.

The summary answers the question a wall clock cannot: did each compile get
slower, or did fewer of them run at once? Per-project durations answer the
first, machine occupancy the second, and they have different causes and
different fixes. It also flags the case where cpu sits free while the queue
is non-empty — admission refusing work it could take, which would be a
scheduling bug rather than a slow compiler.

CI is also the only environment with a realistic shape for this: 4 cores and
16GB, where the fork-memory budget actually binds. A developer machine
cannot reproduce it, which is why the constrained case has gone unmeasured.

Verified against a real local run, where it immediately showed 21.9% intern
hit rate (sharing 1.28, well under the 2-3x that justified interning), 0%
starvation, and a single compile allocating 145GB of churn.

* bsp: reuse the ECJ classloader across compiles

ECJ keeps the JDK module image in statics -- JRTUtil.images, ctSymFiles,
JRT_FILE_SYSTEMS, and classCache (a SoftClassCache of already-parsed JDK
class files). Statics are per-classloader, and createEcjTools built a fresh
URLClassLoader for every compile, so each Java compile started with all four
caches empty: it re-opened ct.sym as a zip filesystem and re-read every JDK
class it touched. Reusing one loader per ECJ version is also how ECJ is meant
to be used -- the Eclipse IDE holds it for 